LOGCXX-556 Update syslog appender to better account for multi-part messages